# test_onto

./: .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/backend/: main.py
app/backend/dependencies/: __init__.py  services.py
app/backend/router/: data_upload.py  mapping_ontology.py
app/backend/schmas/: ontology_schma.py
app/backend/services/: data_parser.py  data_upload_service.py  ontology_service.py  ontology_storage.py  relation_extractor.py
app/backend/services/ontology_services/: config.py  hybrid_mapper.py  models.py  ontology_builder.py  rdf_parser.py  rule_based_mapper.py  semantic_mapper.py  utils.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: App.css  App.tsx  index.css  main.tsx
app/frontend/src/api/: client.ts  ontology.ts
app/frontend/src/hooks/: useOntology.ts
app/frontend/src/pages/: Home.tsx  OntologyList.tsx  UploadData.tsx  ViewOntology.tsx  VisualizeOntology.tsx
app/frontend/src/types/: ontology.ts
app/tests/: __init__.py  conftest.py
app/tests/test_router/: __init__.py  test_mapping_ontology.py
app/tests/test_services/: __init__.py  test_ontology_service.py
app/tests/test_services_ontology/: __init__.py  test_hybrid_mapper.py  test_ontology_builder.py  test_rule_based_mapper.py  test_semantic_mapper.py
notebook/: csv_to_onto.ipynb  extract_info.ipynb  extract_schmas.ipynb  extract_schmas2.ipynb  extract_schmas3.ipynb  extract_schmas4.ipynb  factory_data.ttl  mapping_with_data.owl  metadata_ontology.ttl  ontology.ipynb  prepro_data.ipynb  split_data.ipynb
owl/: mapping.owl
(+10 files in other folders)
