[project]
name = "ontology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.121.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-multipart>=0.0.20",
    "rdflib>=7.4.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.38.0",
]
